# asr-streamer

./: README.md  install-as-uv-tool  nemo_asr_streaming_server.py  pyproject.toml  pyrightconfig.json
choreography/: sasrc.py
communication/: rc.py  server.py
examples/asr_client/: example_client.py
scripts/: nemo_asr_streaming_server.py
streaming/: __init__.py  asr.py  mic.py
typings/nemo/collections/asr/: __init__.pyi  modules.pyi
typings/nemo/collections/asr/models/: __init__.pyi  ctc_bpe_models.pyi
typings/nemo/collections/asr/parts/: __init__.pyi
typings/nemo/collections/asr/parts/utils/: __init__.pyi  rnnt_utils.pyi
